# Traffic-and-Air-Quality-Analysis

./: .gitignore  README.md  air_quality_random_forest.ipynb  analysis.py  arma_model_comparison.ipynb  data-clean.py  main.py  pyproject.toml  sarnia_analysis.ipynb  stations.txt
air_quality_dataset/: download_aq_data.py  station_info.csv
data/: data-clean.py  data_description.md
meteorological_dataset/: download_weather.py  get_weather_data.ipynb
models/: Ottawa_Downtown_no_traffic_gam.pkl  Ottawa_Downtown_no_traffic_xgboost.pkl  Ottawa_Downtown_with_traffic_gam.pkl  Ottawa_Downtown_with_traffic_xgboost.pkl  Sarnia_no_traffic_gam.pkl  Sarnia_no_traffic_xgboost.pkl  Sarnia_with_traffic_gam.pkl  Sarnia_with_traffic_xgboost.pkl  Sault_Ste._Marie_no_traffic_gam.pkl  Sault_Ste._Marie_no_traffic_xgboost.pkl  Sault_Ste._Marie_with_traffic_gam.pkl  Sault_Ste._Marie_with_traffic_xgboost.pkl  Toronto_Downtown_no_traffic_gam.pkl  Toronto_Downtown_no_traffic_xgboost.pkl  Toronto_Downtown_with_traffic_gam.pkl  Toronto_Downtown_with_traffic_xgboost.pkl  Toronto_West_no_traffic_gam.pkl  Toronto_West_no_traffic_xgboost.pkl  Toronto_West_with_traffic_gam.pkl  Toronto_West_with_traffic_xgboost.pkl
notebooks/: Ottawa_Stacking_Ensemble.ipynb  Ottawa_Stacking_Ensemble_no_traffic.ipynb  Toronto_GAM_RF_nb.ipynb  Toronto_XGboost_nb.ipynb  analysis_01_foundations.ipynb  analysis_02_foundations.ipynb  arma_model_comparison.ipynb  notebook03.ipynb  ottawa_stacking_ensemble_model.pkl  prepare_ottawa_data.py
report/: executive_report.qmd  references.bib
results/: all_model_results.csv  (+7 more)
(+50 files in other folders)
