[project]
name = "traffic-and-air-quality-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "nbclient>=0.10.4",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]
